# fun-shooter

./: Cargo.toml  README.md
art/: fun_shooter.blend  fun_shooter.blend1
assets/: registry.json
assets/blueprints/: Player.glb
assets/glb/weapons/: WA_2000.glb
assets/levels/: World.glb
assets/materials/: Material.001.glb  Material.002.glb  Material.003.glb  Material.004.glb  Material.005.glb  Material.006.glb  Material.007.glb  Material.008.glb  Material.009.glb  Material.010.glb  Material.011.glb  Material.012.glb  Material.013.glb  Material.015.glb  Material.016.glb  Material.020.glb  Material.022.glb  Material.024.glb  Material.030.glb  Material.031.glb  Material.032.glb  Material.033.glb  Material.034.glb  Material.035.glb  Material.036.glb  Material.037.glb  Material.038.glb  Material.039.glb  Material.040.glb  Material.041.glb  Material.042.glb  Material.043.glb  Material.044.glb  Material.048.glb  Material.049.glb  Material.050.glb  Material.052.glb  Material.053.glb  Material.054.glb  Material.055.glb  (+53 more)
src/: main.rs
src/debug_hud/: mod.rs  systems.rs
src/game_flow/: mod.rs  systems.rs
src/player/: components.rs  mod.rs  systems.rs
src/player/camera/: components.rs  mod.rs  systems.rs
src/world/: lighting.rs  mod.rs  systems.rs
