[package]
name = "fun-shooter"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.3.1"
bevy = { version = "0.16.1", features = ["dynamic_linking", "mp3"] }
bevy-inspector-egui = "0.33.1"
blenvy = { git = "https://github.com/n1ght-hunter/Blenvy.git", branch = "dev/blenvy-bevy-0.16" }
